--- a/README.Rmd
+++ b/README.Rmd
@@ -19,13 +19,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-This R package is part of the the Veracio survey tool developed by leaders from [Orb](http://www.orbmedia.org/), [Datassist](http://idatassist.com/), and [Cognite Labs](http://www.cognitelabs.com/), and supported by a [2016 Knight Foundation News Challenge on Data](http://idatassist.com/knight/). This survey tool will provide a set of software tools and online services that:
+This R package is part of the the Veracio survey tool developed by leaders from [Orb](http://www.orbmedia.org/), [Datassist](http://idatassist.com/), and [Cognite Labs](http://www.cognitelabs.com/), and supported by a [2016 Knight Foundation News Challenge on Data](http://idatassist.com/knight/). This survey tool provides a set of software tools and online services that:
 
 - frame proper sampling questions,
 - help construct, link, and embed them into existing survey and Q&A platforms, and 
 - visualize and then statistically adjust the collected results.
 
-This open-source tool weights the collected results for demographic and other factors to make them more scientifically sound. The Veracio tool is being developed and made available at no cost to anyone wishing to poll the crowd and share reliable, credible results.
+This open-source tool weights collected survey results for demographic and other factors to make them more scientifically sound. The Veracio tool is being developed and made available at no cost to anyone wishing to poll the crowd and share reliable, credible results.
 
 ## Installation
 
