Update README with new age bins

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ texassurvey
 
 What result would a person using the survey find if s/he looked at the raw result of the survey, without adjusting for the demographic differences between the survey respondents and the true population in Texas?
 
-```{r, fig.height=6, fig.width=6}
+```{r, fig.height=5, fig.width=5}
 library(dplyr)
 library(ggplot2)
 resultDF <- texassurvey %>% group_by(response) %>% summarize(n = n())
@@ -66,8 +66,10 @@ weighted
 
 Now what result on the survey question will we find?
 
-```{r, fig.height=6, fig.width=6}
-resultDF <- weighted %>% group_by(response) %>% summarize(n = sum(weight))
+```{r, fig.height=5, fig.width=5}
+resultDF <- weighted %>% 
+        group_by(response) %>% 
+        summarize(n = sum(weight))
 ggplot(resultDF, aes(x = response, y = n)) +
         geom_bar(stat = "identity", fill = "midnightblue")
 ```
