Update README and figures

--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ texassurvey
 
 What result would a person using the survey find if s/he looked at the raw result of the survey, without adjusting for the demographic differences between the survey respondents and the true population in Texas?
 
-```{r, fig.height=5, fig.width=5}
+```{r original, fig.height=5, fig.width=5}
 library(dplyr)
 library(ggplot2)
 resultDF <- texassurvey %>% group_by(response) %>% summarize(n = n())
@@ -67,7 +67,7 @@ weighted
 
 Now what result on the survey question will we find?
 
-```{r, fig.height=5, fig.width=5}
+```{r weighted, fig.height=5, fig.width=5}
 resultDF <- weighted %>% 
         group_by(response) %>% 
         summarize(n = sum(weight))
