Oops TYPO -- NOW the vignette is done

--- a/vignettes/wwc_weighting.Rmd
+++ b/vignettes/wwc_weighting.Rmd
@@ -124,4 +124,4 @@ margin_of_error(tmp, response)
 
 The raw survey has two sources of error, the standard error and the bias. The total error of the raw survey is the square root of the sum of the squares of these two quantities. We assume that the weighted survey has approximately no bias, since we removed the effect of bias in the survey sample by calculating post-stratification weights using ACS data. Thus, the total error of the weighted survey is approximately the same as the standard error.
 
-Notice that the standard error is higher for the weighted survey than for the raw survey; this is a consistent result of applying the algorithm here. However, the bias was high in the raw survey, so the total error in the weighted survey (which is approximately the same as the standard error) is significantly lower than the total error in the raw survey. A survey user with a biased survey like this will improve the margin or error of his/her survey by using the Veracio tool.
+Notice that the standard error is higher for the weighted survey than for the raw survey; this is a consistent result of applying the algorithm here. However, the bias was high in the raw survey, so the total error in the weighted survey (which is approximately the same as the standard error) is significantly lower than the total error in the raw survey. A survey user with a biased survey like this will improve the margin of error of his/her survey by using the Veracio tool.
